fix: update configs