@@ -23,10 +23,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>14</java.version>
+        <java.version>1.8</java.version>
         <resource.delimiter>@</resource.delimiter>
         <springdoc-openapi-ui.version>1.2.33</springdoc-openapi-ui.version>
-        <maven-compiler-plugin.compilerArgs>--enable-preview</maven-compiler-plugin.compilerArgs>
+        <maven-compiler-plugin.compilerArgs>
+<!--            &#45;&#45;enable-preview-->
+        </maven-compiler-plugin.compilerArgs>
     </properties>
 
     <dependencies>
